k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yoga-app
  namespace: yoga-app
spec:
  selector:
    app: yoga-app
  ports:
    - port: 80
      targetPort: 3000
